--- a/app/views/directors/index.html.erb
+++ b/app/views/directors/index.html.erb
@@ -17,10 +17,9 @@
 
       <% @directors.each do |director| %>
       <tr>
+        <td><img src ="<%= director.image_url %>"></td>
         <td><%= director.name %></td>
         <td><%= director.dob %></td>
-        <td>
-          <img src ="<%= director.image_url %>"></td>
         <td>
           <a href="/directors/<%= director.id %>" class="btn btn-primary">Show</a>
           <a href="/directors/<%= director.id %>/edit" class="btn btn-warning">Edit</a>
