--- a/app/views/actors/show.html.erb
+++ b/app/views/actors/show.html.erb
@@ -5,6 +5,9 @@
 <div class="row">
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
+      <dt>Image url</dt>
+      <dd><img src="<%= @actor.image_url %>"></dd>
+
       <dt>Name</dt>
       <dd><%= @actor.name %></dd>
 
@@ -14,8 +17,8 @@
       <dt>Bio</dt>
       <dd><%= @actor.bio %></dd>
 
-      <dt>Image url</dt>
-      <dd><%= @actor.image_url %></dd>
+      <dt>Number of characters</dt>
+      <dd><%= Character.where(:actor_id => @actor.id).count %></dd>
 
     </dl>
 
@@ -32,3 +35,51 @@
     </div>
   </div>
 </div>
+
+<ul class = "table">
+  <th>List of Characters</th>
+  <% Character.where(:actor_id => @actor.id ).each do |character| %>
+    <li><a href="/characters/<%=character.id%>"><%= character.name %></a> </li>
+  <% end %>
+</ul>
+
+<div class="row">
+  <div class="col-md-12">
+    <form action="/create_character" method="post">
+      <!-- Hidden input for authenticity token to protect from forgery -->
+      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+      <div class="form-group">
+        <label for="movie_id" class="control-label">
+          Movie
+        </label>
+
+        <%= select_tag(:movie_id, options_from_collection_for_select(Movie.all, :id, :title, @character.movie_id), :class => "form-control") %>
+        </div>
+
+      </div>
+
+      <!-- Label and input for actor_id -->
+      <div class="form-group">
+        <label for="actor_id" class="control-label">
+          Actor
+        </label>
+
+        <input type="text" id="title" name="title" placeholder="Movie" class="form-control" value="<%= @actor.name %>">
+      </div>
+
+      <!-- Label and input for name -->
+      <div class="form-group">
+        <label for="name" class="control-label">
+          Name
+        </label>
+
+        <input type="text" id="name" name="name" placeholder="Name" class="form-control">
+      </div>
+
+      <button class="btn btn-success">
+        Add Character to Movie
+      </button>
+      or
+      <a href="/characters">Cancel</a>
+    </form>
