--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -18,10 +18,13 @@
       <dd><%= @movie.description %></dd>
 
       <dt>Image url</dt>
-      <dd><%= @movie.image_url %></dd>
+      <dd><img src ="<%= @movie.image_url %>"></dd>
 
       <dt>Director</dt>
       <dd><%= Director.find_by(:id => @movie.director_id).name %></dd>
+
+      <dt>Number of characters</dt>
+      <dd><%= Character.where(:movie_id => @movie.id).count %></dd>
 
     </dl>
 
@@ -38,3 +41,50 @@
     </div>
   </div>
 </div>
+
+<ul class = "table">
+  <th>List of Characters</th>
+  <% Character.where(:movie_id => @movie.id ).each do |character| %>
+    <li><a href="/characters/<%=character.id%>"><%= character.name %></a> </li>
+  <% end %>
+</ul>
+
+
+<div class="row">
+  <div class="col-md-12">
+    <form action="/create_character" method="post">
+      <!-- Hidden input for authenticity token to protect from forgery -->
+      <input name="authenticity_token" type="hidden" value="<%= form_authenticity_token %>">
+
+      <div class="form-group">
+        <label for="movie_id" class="control-label">
+          Movie
+        </label>
+
+        <input type="text" id="title" name="title" placeholder="Movie" class="form-control" value="<%= @movie.title %>">
+      </div>
+
+      <!-- Label and input for actor_id -->
+      <div class="form-group">
+        <label for="actor_id" class="control-label">
+          Actor
+        </label>
+
+        <%= select_tag(:actor_id, options_from_collection_for_select(Actor.all, :id, :name, @character.actor_id), :class => "form-control") %>
+      </div>
+
+      <!-- Label and input for name -->
+      <div class="form-group">
+        <label for="name" class="control-label">
+          Name
+        </label>
+
+        <input type="text" id="name" name="name" placeholder="Name" class="form-control">
+      </div>
+
+      <button class="btn btn-success">
+        Add Character to Movie
+      </button>
+      or
+      <a href="/characters">Cancel</a>
+    </form>
